Added Firebase Distribution
Testing distribution notifications
Added Auth and Sign in Screens with insurance selector
Added bottom navigation, proper auth endpoints, code dialog
added check for auth to show main screen, added main and profile screens
added code input screen
now insurances loading by id,
added profile screens - profile edit, profile view,
profile security with ability to change email and password(currently doesn't work because server don't have needed methods),
profile emergency contact, profile notification settings,
profile insurances (doesn't work due to server)
added screen to restore/change temp password
added proper signup profile validation
insurances working now
emergency contact is done, need one server fix (which is not require changes in app)
added avatar
auth, profile, main screen design
main screen WIP due to font oddities