@@ -20,5 +20,6 @@
     <string name="auth_chooser_sign_up">Sign Up</string>
     <string name="auth_chooser_sign_in">Sign In</string>
     <string name="btn_save">Save</string>
+    <string name="sign_in_google">Sign in with Google</string>
 
 </resources>
